syntax = "proto3";

option go_package = "./pb";

import "google/protobuf/empty.proto";

message SubnetAddress {
  string subnet_address = 1;
}

message AuthCheckRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message AuthCheckResponse {
  bool accepted = 1;
}

message ResetBucketRequest {
  string login = 1;
  string ip = 2;
}

service AntiBruteForceService {
  rpc AddToBlackList (SubnetAddress) returns (google.protobuf.Empty) {}
  rpc RemoveFromBlackList (SubnetAddress) returns (google.protobuf.Empty) {}
  rpc AddToWhiteList (SubnetAddress) returns (google.protobuf.Empty) {}
  rpc RemoveFromWhiteList (SubnetAddress) returns (google.protobuf.Empty) {}
  rpc ClearLists (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc AuthCheck(AuthCheckRequest) returns (AuthCheckResponse) {}
  rpc ResetBucket(ResetBucketRequest) returns (google.protobuf.Empty) {}
}